# demo-crew-ai

car_dealer/: README.md  pyproject.toml  report.md
car_dealer/chroma_db/: chroma.sqlite3
car_dealer/src/car_dealer/: crew.py  main.py
car_dealer/src/car_dealer/config/: agents.yaml  tasks.yaml
car_dealer/src/car_dealer/tools/: python_tool.py
